# simple-tcp-server-client-rust

./: .env  .gitignore  Cargo.toml  README.md  db.sqlite
.github/workflows/: shuttle_deploy.yaml  shuttle_deploy.yml  tutor_course.yml
.shuttle/: config.toml
http/src/: httprequest.rs  httpresponse.rs  lib.rs
src/: custom_error.rs  main.rs  state.rs
src/db_access/: course.rs  mod.rs  tutor.rs
src/handlers/: course.rs  tutor.rs
src/models/: course.rs  tutor.rs
src/routes/: course.rs  tutor.rs
src/seeds/: course.rs  mod.rs  tutor.rs
tcpclient/: Cargo.toml
tcpclient/src/: main.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
