[package]
name = "tutor-course-backend"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
fake = "4.3.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
